test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/union_wrong_member.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 1
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: foo
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: u
                  Bool: 1
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: b
                      Int: 
            CS: 
              CReturn: 
                CDot: 
                  TIdentifier: b
                  CVar: 
                    TIdentifier: foo
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
